--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
+    "@react-spring/web": "^9.7.5",
     "@types/react-simple-maps": "^3.0.6",
     "axios": "^1.7.9",
     "react": "^19.0.0",
